# Jieba-CPP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: dict_be.dat.zst
include/: jieba.h  jieba_common.h
src/: jieba.cpp  jieba_dict.cpp  jieba_hmm_seg.cpp
tests/: CMakeLists.txt  test_encoding.cpp  test_endianness.cpp  test_main.h  test_reproducible.cmake  test_segmentation.cpp
tools/: generate_dict.py  generate_hmm_model.py
